Added local storage to save the state of the selected question status

--- a/src/components/Questions.css
+++ b/src/components/Questions.css
@@ -1,85 +1,84 @@
 body {
-   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-   margin: 0;
-   display: flex;
-   justify-content: center;
-   -webkit-font-smoothing: antialiased;
-   -moz-osx-font-smoothing: grayscale;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+		sans-serif;
+	margin: 0;
+	display: flex;
+	justify-content: center;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 caption {
-   font-weight: bold;
+	font-weight: bold;
 }
 
 input {
-    -webkit-appearance: none;
-   -moz-appearance: none;
-   appearance: none; 
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 
-   border-radius: 50%;
-   width: 16px;
-   height: 16px;
+	border-radius: 50%;
+	width: 16px;
+	height: 16px;
 
-   border: 2px solid #999;
-   transition: 0.2s all linear;
-   outline: none;
-   margin-right: 5px;
+	border: 2px solid #999;
+	transition: 0.2s all linear;
+	outline: none;
+	margin-right: 5px;
 
-   position: relative;
-   top: 4px;
+	position: relative;
+	top: 4px;
 }
 
 input:checked {
-   border: 6px solid rgb(26, 31, 26);
-} 
+	border: 6px solid rgb(26, 31, 26);
+}
 
 .status-chek {
-   text-decoration: none;
-   margin-left: 3px;
-   margin-right: 6px;
+	text-decoration: none;
+	margin-left: 3px;
+	margin-right: 6px;
 }
 
 .not-started {
-   margin: 10px 0;
-   padding: 10px;
-   word-wrap: break-word;
-   max-width: 450px;
-   color:black;
+	margin: 10px 0;
+	padding: 10px;
+	word-wrap: break-word;
+	max-width: 450px;
+	color: black;
 }
 
-.got-through {
-   margin: 10px 0;
-   padding: 10px;
-   word-wrap: break-word;
-   max-width: 450px;
-   color: #3CB371;
-   font-weight: 600;
-
-}.need-help {
-   margin: 10px 0;
-   padding: 10px;
-   word-wrap: break-word;
-   max-width: 450px;
-   color: #7c92eb;
-   font-weight:600;
+.resolved {
+	margin: 10px 0;
+	padding: 10px;
+	word-wrap: break-word;
+	max-width: 450px;
+	color: #3cb371 !important;
+	font-weight: 600;
 }
-.not-understood {
-   margin: 10px 0;
-   padding: 10px;
-   word-wrap: break-word;
-   max-width: 450px;
-   color: #FF0000;
-   font-weight: bold;
+.in-progress {
+	margin: 10px 0;
+	padding: 10px;
+	word-wrap: break-word;
+	max-width: 450px;
+	color: #7c92eb !important;
+	font-weight: 600;
+}
+.not-clear.css-ag7rrr-MuiTypography-root {
+	margin: 10px 0;
+	padding: 10px;
+	word-wrap: break-word;
+	max-width: 450px;
+	color: #ff0000 !important;
+	font-weight: bold;
 }
 
 .hide {
-display: none;
+	display: none;
 }
 
-.show  {
-   width: 30px;
-      height: 30px;
-      color: rgb(13, 13, 13);
-
+.show {
+	width: 30px;
+	height: 30px;
+	color: rgb(13, 13, 13);
 }
